--- a/app/src/main/res/layout/item_media.xml
+++ b/app/src/main/res/layout/item_media.xml
@@ -11,19 +11,45 @@
         android:orientation="horizontal"
         android:background="@android:color/black" >
 
-        <ImageButton
-            android:id="@+id/buttonPause"
-            android:layout_height="match_parent"
+        <FrameLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:src="@drawable/ic_action_playback_pause"/>
+            android:layout_height="match_parent"
+            android:padding="@dimen/btn_margin">
 
-        <ImageButton
-            android:id="@+id/buttonPlay"
-            android:layout_height="match_parent"
+            <Button
+                android:id="@+id/buttonPause"
+                android:background="@color/bg_button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <ImageView
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_action_playback_pause"
+                android:scaleType="centerInside"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </FrameLayout>
+
+        <FrameLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:src="@drawable/ic_action_playback_play"/>
+            android:layout_height="match_parent"
+            android:padding="@dimen/btn_margin">
+
+            <Button
+                android:id="@+id/buttonPlay"
+                android:background="@color/bg_button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <ImageView
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_action_playback_play"
+                android:scaleType="centerInside"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </FrameLayout>
 
     </LinearLayout>
 
@@ -34,33 +60,87 @@
         android:orientation="horizontal"
         android:background="@android:color/black">
 
-        <ImageButton
-            android:id="@+id/buttonPrev"
-            android:layout_height="match_parent"
+        <FrameLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:src="@drawable/ic_action_playback_prev"/>
+            android:layout_height="match_parent"
+            android:padding="@dimen/btn_margin">
 
-        <ImageButton
-            android:id="@+id/buttonRewind"
-            android:layout_height="match_parent"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_action_playback_rew"/>
+            <Button
+                android:id="@+id/buttonPrev"
+                android:background="@color/bg_button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
-        <ImageButton
-            android:id="@+id/buttonForward"
-            android:layout_height="match_parent"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_action_playback_forw"/>
+            <ImageView
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_action_playback_prev"
+                android:scaleType="centerInside"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </FrameLayout>
 
-        <ImageButton
-            android:id="@+id/buttonNext"
-            android:layout_height="match_parent"
+
+        <FrameLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:src="@drawable/ic_action_playback_next"/>
+            android:layout_height="match_parent"
+            android:padding="@dimen/btn_margin">
+
+            <Button
+                android:id="@+id/buttonRew"
+                android:background="@color/bg_button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <ImageView
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_action_playback_rew"
+                android:scaleType="centerInside"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </FrameLayout>
+
+
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:padding="@dimen/btn_margin">
+
+            <Button
+                android:id="@+id/buttonForward"
+                android:background="@color/bg_button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <ImageView
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_action_playback_forw"
+                android:scaleType="centerInside"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:padding="@dimen/btn_margin">
+
+            <Button
+                android:id="@+id/buttonNext"
+                android:background="@color/bg_button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <ImageView
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_action_playback_next"
+                android:scaleType="centerInside"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </FrameLayout>
 
     </LinearLayout>
 
