--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="bg_button">@color/darker_gray</color>
 
     <color name="gray">#D1D3D4</color>
-    <color name="darker_gray">#B1B1B1</color>
+    <color name="darker_gray">#212121</color>
     <color name="lighter_gray">#FEFEFE</color>
 
 </resources>
